# omx-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  pr.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PARITY.md  PORT_PLAN.md
src/omx/: __init__.py  __main__.py
src/omx/adapt/: __init__.py  contracts.py  hermes.py  openclaw.py  paths.py  registry.py
src/omx/agents/: __init__.py  native_config.py  policy.py  roles.py
src/omx/autoresearch/: __init__.py  contracts.py  runtime.py  skill_validation.py
src/omx/catalog/: __init__.py  discovery.py  installable.py  metadata.py  skill_mirror.py
src/omx/cli/: __init__.py  catalog_contract.py  (+10 more)
tests/unit/: test_adapt.py  test_agents.py  test_autoresearch_contracts.py  test_autoresearch_runtime.py  test_catalog.py  test_cli.py  test_cli_doctor.py  test_cli_missing_subcommands.py  test_cli_team_subcommands.py  test_config.py  test_config_generator.py  test_config_models.py  test_core_authority.py  test_core_dispatch.py  test_core_engine.py  test_core_mailbox.py  test_core_replay.py  test_core_types.py  test_delivery_log.py  test_hooks.py  test_hooks_complete.py  test_hooks_prompt_guidance_contract.py  test_hooks_session.py  test_hooks_triage_heuristic.py  test_hud_complete.py  test_hud_renderer.py  test_hud_state.py  test_hud_watch.py  test_mcp_protocol.py  test_mcp_protocol_regression.py  test_mcp_servers.py  test_mcp_state_server.py  test_modes_base.py  test_mux.py  test_notifications_complete.py  test_orchestration.py  test_orchestration_commands.py  test_pipeline.py  test_question.py  test_ralph.py  (+39 more)
(+203 files in other folders)
