[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omx"
version = "0.15.0"
description = "Multi-agent orchestration layer for OpenAI Codex CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Chris" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.scripts]
omx = "omx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omx = ["assets/**/*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

